packages/dropdown/dropdown.scss
@import "inputs";
@import "rw-shared";


.rw-dropdownlist {
  position: relative;
  cursor: pointer;
  overflow: hidden;
  line-height: auto;

  &.rw-open {
    overflow: visible;
  }

  .rw-input {
    // Not sure why this needs to be tweaked, but it does for visual consistency.
    padding: 9px 10px;
  }

  &:hover {

    .rw-dropdownlist-picker {
      background-color: $input-state-hover;
    }

  }

  .rw-dropdownlist-picker {
    position: absolute;
    right: 0;
    top: 0;
    width: 34px;
    border-left: 1px solid $input-border-color !important;
    
    &:hover {
      background-color: $input-state-hover;
    }
  }
}

